# MLops_deploy

./: README.md  pyproject.toml
insurence/: insurance_tmp.ipynb
pipelines/: insurance_tmp.ipynb  insurence.ipynb
