[tool.poetry]
name = "mes-06"
version = "0.1.0"
description = ""
authors = ["LucasJFaust <lucasjfm.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.2"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
lightgbm = "^4.3.0"
yellowbrick = "^1.5"
matplotlib = "^3.8.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
